src/main/resources/stylesheets/specman-pdf.css
li {
  /* Concerning font size, see div */
  font-size: 15.28px;
}

h1 {
  font-size: 26.2px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

h1>span {
  font-size: 26.2px;
}

h2 {
  font-size: 20.2px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

h2>span {
  font-size: 20.2px;
}

h3 {
  font-size: 16px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

h3>span {
  font-size: 16px;
}

h4 {
  font-size: 13px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

h4>span {
  font-size: 13px;
}

blockquote {
  font-size: 15.28px;
}

blockquote>span {
  font-size: 15.28px;
}

p {
  font-size: 15.28px;
}

div {
  /* The JEditorPane often encapsules parts of a text in divs. For an unknown reason, html2pdf renders these
   parts with a slightly different font size than the text outside of diffs. The font size below is a correction.
   The size defined in here will be multiplied with a dynamic factor before rendering. See initHTMLStyles() */
  font-size: 15.28px;
}

font[size="7"] { font-size: 39.6px; padding-top: -10px; }
font[size="7"]>span { font-size: 39.6px; }

font[size="6"] { font-size: 26px; padding-top: -10px; }
font[size="6"]>span { font-size: 26px; }

font[size="5"] { font-size: 20px; padding-top: -10px; }
font[size="5"]>span { font-size: 20px; }

font[size="3"] { font-size: 12px; padding-top: -10px; }
font[size="3"]>span { font-size: 12px; }

font[size="2"] { font-size: 10px; padding-top: -10px; }
font[size="2"]>span { font-size: 10px; }

font[size="1"] { font-size: 8px; padding-top: -10px; }
font[size="1"]>span { font-size: 8px; }

span {
  /* See div */
  font-size: 15.28px;
  padding-top: -10px;
}

